--- a/style.css
+++ b/style.css
@@ -231,6 +231,45 @@ body {
     background-color: rgb(255, 255, 255);
     color: black;
 }
+
+/* Added Media Queries for Responsive */
+/* For mobile devices */
+@media (max-width: 480px) {
+  .container {
+    width: 100%;
+    height: 100%;
+  }
+  .container .date{
+    width: 300px;
+    height: 150px;
+  }
+  .container .date p{
+    font-size: 15px;
+  }
+  .date input {
+    width: 120px;
+  }
+  .date #button{
+    width: 80px;
+    font-size: 11px;
+  }
+  .heading{
+    position: absolute;
+    left: 25%;
+    top: 4%;
+    font-size: 16px;
+  }
+  .sun{
+    width: 60px;
+    height: 60px;
+  }
+  .moon{
+    height: 40px;
+    width: 40px;
+  }
+}
+
+
 /* Sky day */
 .sky {
   position: fixed;
@@ -258,6 +297,7 @@ body {
   margin-top: 95px;
   z-index: 1;
 }
+
 @keyframes wave {
   0% {
     position: absolute;
@@ -300,6 +340,46 @@ body {
     }
 }
 
+/* Added Media Queries */
+
+@media (max-width:480px) {
+    .flag {
+    width: 150px;
+    height: 100px;
+    position: absolute;
+    left: 40%;
+    animation: wave 3s 1 ease-in-out;
+  }
+  @keyframes wave {
+  0% {
+    position: absolute;
+    left: 40%;
+    bottom: -200px;
+  }
+  25% {
+    position: absolute;
+    left: 40%;
+    bottom: -100px;
+  }
+  50% {
+    position: absolute;
+    left: 40%;
+    bottom: 100px;
+  }
+  75% {
+    position: absolute;
+    left: 40%;
+    bottom: 300px;
+  }
+  100% {
+    position: absolute;
+    left: 40%;
+    bottom: 400px;
+  }
+}
+
+}
+
 .pol{
     position: absolute;
     height: 90%;
@@ -311,6 +391,12 @@ body {
     /* background:linear-gradient(to top,rgb(82, 255, 120),rgb(228, 228, 228),rgb(255, 132, 17)); */
     background-color: white;
     box-shadow: 0px 0px 40px black;
+}
+@media (max-width:480px) {
+  .pol{
+    width: 7px;
+  }
+  
 }
  /* Birds */
 
